[project]
name = "langgraph-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.1",
    "langchain-community>=0.4.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.10",
    "streamlit>=1.56.0",
]
