[project]
name = "langgraph-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.1",
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.10",
    "psycopg[binary,pool]>=3.3.3",
    "pypdf>=6.8.0",
    "streamlit>=1.56.0",
]
